<resources>
    <string name="app_name">禁煙ヘルパー</string>
    <string name="title_progress_fragment">達成状況</string>
    <string name="title_graph_fragment">禁煙グラフ</string>
    <string name="title_counter_fragment">喫煙カウンター</string>
    <string name="menu_item1">目標設定</string>
    <string name="menu_item2">item2</string>
    <string name="text_message">あなたの決断を応援します！\nさぁ、一緒に禁煙しましょう！</string>
    <string name="text_time_stop_smoking">タバコを止めた日時</string>
    <string name="text_number_of_smoking_onDay">1日の喫煙本数</string>
    <string name="text_number_of_cigarettes_in_box">1箱に入っている本数</string>
    <string name="text_total_smoking_period">通算喫煙年数</string>
    <string name="text_tar">タールの量</string>
    <string name="text_iQS">(iQSは0.5mgを入力)</string>
    <string name="text_nicotine">ニコチンの量</string>
    <string name="text_minus">-</string>
    <string name="text_plus">+</string>
    <string name="text_next">次へ進む</string>
    <string name="text_unit_mg">mg</string>
    <string name="text_unit_number">本</string>
    <string name="text_set_target">目標設定</string>
    <string name="text_non_smoking_period">禁煙継続期間</string>
    <string name="text_save_money">節約できた金額</string>
    <string name="text_extend_life">伸びた寿命</string>
    <string name="text_non_smoking_number">吸わなかった本数</string>
    <string name="text_smoking_until_now">今まで喫煙してきた期間で・・・</string>
    <string name="text_cumulative_number_of_smoking">累積喫煙本数</string>
    <string name="text_lost_money">失った金額</string>
    <string name="text_lost_life">失った寿命</string>
    <string name="text_dialog_title">目標設定</string>

    <string-array name="text_cheering_messages">
        <item>一口だけ吸う愚か者</item>
        <item>死ぬ気で、全力で、タバコのことを、考え抜け！</item>
        <item>タバコを吸うメリットある？</item>
        <item>あと一日、あと一日でいいんだ。がんばれ。</item>
        <item>禁煙は気持ちの持ち次第です。</item>
        <item>どんな理由があろうとタバコは”百害あって一利なし”</item>
        <item>あなたには死んでほしくないのです</item>
        <item>家族はあなたの健康を心配しています</item>
        <item>禁煙に必要なことは自分の意思だけです</item>
        <item>あなたの体は、あなた一人のものですか？</item>
        <item>自分の家族、周りが迷惑をしていると言い聞かせよう</item>
        <item>禁煙すると手持ちぶさたになる。これをどう乗り切るか？</item>
        <item>禁煙に踏み切るきっかけは、どんな事でも良い！</item>
        <item>昔、自分がタバコを吸っていたと知ったら、君は何と言うだろう。</item>
        <item>生まれた時は誰も吸わないのに、人は何故タバコを吸うのだろう。</item>
        <item>いつからだろう、禁煙しようと思ったのは。</item>
        <item>いつまでも健康でいるために</item>
        <item>タバコを止めて痛感したのは、食事の美味しさでした。</item>
        <item>禁煙は心に嵐が吹くようなもの</item>
        <item>タバコと分かれて寂しいけれど、健康という新しいことに会える</item>
        <item>何事も挑戦だ。</item>
        <item>禁煙おめでとう！</item>
        <item>タバコの臭さに愕然とする</item>
        <item>タバコをやめた今は作業の進め方が根本的に変わった</item>
        <item>集中力が落ちると心配していたが、全然そんなことない</item>
        <item>今までに何百万円ドブに捨ててきたのか？</item>
        <item>自分がタバコを吸う場面を予測し、予め回避しよう！</item>
        <item>吸いたい渇望を乗り越える</item>
        <item>今まてどうやって切り抜けて来たか思い出せ！</item>
        <item>吸うことでは何も解決しないことを思い出せ！</item>
        <item>何のために禁煙するのか思い出せ！</item>
        <item>予め来るとわかっているパンチは、耐えることができる</item>
    </string-array>

    <string-array name="list_goal_setting">
        <item>1日</item>
        <item>2日</item>
        <item>3日</item>
        <item>4日</item>
        <item>5日</item>
        <item>6日</item>
        <item>1週間</item>
        <item>10日</item>
        <item>2週間</item>
        <item>1ヶ月</item>
        <item>3ヶ月</item>
        <item>半年</item>
        <item>1年</item>
    </string-array>
</resources>
