<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InitialActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.Guideline
            android:id="@+id/vertical_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

        <TextView
            android:id="@+id/text_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_message"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/text_time_stop_smoking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_time_stop_smoking"
            android:layout_marginTop="@dimen/margin_20dp"
            app:layout_constraintTop_toBottomOf="@+id/text_message"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/button_time_stop_smoking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4dp"
            app:layout_constraintTop_toBottomOf="@+id/text_time_stop_smoking"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/text_number_of_smoking_onDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/button_time_stop_smoking"
            app:layout_constraintRight_toRightOf="@+id/vertical_guideline"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_50dp"
            android:text="@string/text_number_of_smoking_onDay" />

        <TextView
            android:id="@+id/text_number_of_smoking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/text_number_of_smoking_onDay"
            app:layout_constraintRight_toRightOf="@+id/vertical_guideline"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginEnd="@dimen/margin_50dp"
            android:text="20"/>

        <TextView
            android:id="@+id/text_number_of_cigarettes_in_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/text_number_of_smoking"
            app:layout_constraintRight_toRightOf="@+id/vertical_guideline"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_50dp"
            android:text="@string/text_number_of_cigarettes_in_box"/>

        <TextView
            android:id="@+id/text_number_of_cigarettes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/text_number_of_cigarettes_in_box"
            app:layout_constraintRight_toRightOf="@+id/vertical_guideline"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginEnd="@dimen/margin_50dp"
            android:text="20"/>

        <TextView
            android:id="@+id/text_total_smoking_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/text_number_of_cigarettes"
            app:layout_constraintRight_toRightOf="@+id/vertical_guideline"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_50dp"
            android:text="@string/text_total_smoking_period"/>

        <TextView
            android:id="@+id/text_number_of_total_smoking_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/text_total_smoking_period"
            app:layout_constraintRight_toRightOf="@+id/vertical_guideline"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginEnd="@dimen/margin_50dp"
            android:text="4年"/>

        <TextView
            android:id="@+id/text_tar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/text_number_of_total_smoking_period"
            app:layout_constraintRight_toRightOf="@+id/vertical_guideline"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_50dp"
            android:text="@string/text_tar"/>

        <TextView
            android:id="@+id/text_iQS_with_tar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/text_tar"
            app:layout_constraintRight_toRightOf="@+id/vertical_guideline"
            android:layout_marginTop="@dimen/margin_0dp"
            android:layout_marginEnd="@dimen/margin_50dp"
            android:text="@string/text_iQS"/>

        <TextView
            android:id="@+id/text_number_of_tar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/text_iQS_with_tar"
            app:layout_constraintRight_toRightOf="@+id/vertical_guideline"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginEnd="@dimen/margin_50dp"
            android:text="0.5mg"/>

        <TextView
            android:id="@+id/text_nicotine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/text_number_of_tar"
            app:layout_constraintRight_toRightOf="@+id/vertical_guideline"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_50dp"
            android:text="@string/text_nicotine"/>

        <TextView
            android:id="@+id/text_iQS_with_nicotine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/text_nicotine"
            app:layout_constraintRight_toRightOf="@+id/vertical_guideline"
            android:layout_marginTop="@dimen/margin_0dp"
            android:layout_marginEnd="@dimen/margin_50dp"
            android:text="@string/text_iQS"/>

        <TextView
            android:id="@+id/number_of_nicotine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/text_iQS_with_nicotine"
            app:layout_constraintRight_toRightOf="@+id/vertical_guideline"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginEnd="@dimen/margin_50dp"
            android:text="0.5mg"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>